--- a/styles/global.css
+++ b/styles/global.css
@@ -9,7 +9,7 @@
     flex-direction: row;
 }
 body,html {
-    height: 100%;
+    height: 100vh;
 }
 
 body{
@@ -25,8 +25,9 @@ a {
 }
 
 nav {
+    flex-shrink: 0;
     width: 100%;
-    height: 6%;
+    height: 6vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -52,3 +53,5 @@ div.nav-title{
     .short-nav-title { display: inline-block; }
     .full-nav-title { display: none; }
 }
+
+@media (max-height: 500px){}
