--- a/styles/movie-display.css
+++ b/styles/movie-display.css
@@ -1,12 +1,31 @@
+div.contenedor{
+    display: grid;
+    grid-template-columns: repeat(5, 185px);
+    grid-auto-rows: 350px;
+    gap: 5vh 2vw;
+    margin-top: 7vh;
+    margin-bottom: 5vh;
+}
+
 .card-item {
     width: 185px;
 }
 
+.card-container{
+    padding: 5px;
+}
+
 div.movie-card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+
+    border-radius: 5px;
+
     display: flex;
     flex-direction: column;
-    height: fit-content;
-    width: fit-content;
+    height: 350px;
+    width: 185px;
 }
 
 p.movie-year, h2.movie-title{
@@ -14,12 +33,14 @@ p.movie-year, h2.movie-title{
 }
 
 p.movie-year{
+    width: auto;
     margin-top: 2px;
     font-size: 0.95em;
     color: rgba(0,0,0,0.6);   
 }
 
 h2.movie-title {
+    width: auto;
     margin-top: 5px;
     font-size: 1em;
     font-weight: 700;
@@ -28,5 +49,7 @@ h2.movie-title {
 
 
 .movie-card img{
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     height: auto;
 }
