--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -3,9 +3,11 @@ button{
   border: 1px solid rgb(80, 80, 230);
   border-radius: 20px;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
